<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hdmes.crane001.MainActivity">

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText2_userpass"
        android:layout_marginTop="11dp"
        android:text="@string/checkBox3" />

    <ImageView
        android:id="@+id/imageview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2_userpass"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="0dp"
        android:background="#FFF"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/a20170916" />

    <CheckBox
        android:id="@+id/get_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox3"
        android:layout_alignBottom="@+id/checkBox3"
        android:layout_centerHorizontal="true"
        android:text="@string/get_password" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="139dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="请输入用户名"
        android:inputType="textPersonName"
        android:text="@string/editText2_username"
        android:textSize="20dp"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/editText2_userpass"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="请输入密码"
        android:inputType="textPersonName|textPassword"
        android:text="@string/editText2_userpass"
        android:textSize="20dp"
        android:layout_below="@+id/editText_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/button_login"
        android:layout_alignBaseline="@+id/button2_cancel"
        android:layout_alignBottom="@+id/button2_cancel"
        android:layout_toEndOf="@+id/button2_cancel" />

    <Button
        android:id="@+id/button2_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button2_cancel"
        android:layout_marginStart="42dp"
        android:layout_below="@+id/checkBox3"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Copyright 2017 All Rights Reserved By"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/textView3"
        android:textSize="12dp"
        android:textColor="#a4a0a4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="未名网络科技有限公司"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="12dp"
        android:textColor="#a4a0a4"
        android:id="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
